--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "server.js",
   "scripts": {
-    "auth":"nodemon authServer.js",
+    "auth": "nodemon authServer.js",
     "start": "nodemon server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -17,6 +17,8 @@
     "jsonwebtoken": "^9.0.0",
     "mysql": "^2.18.1",
     "mysql2": "^3.0.1",
+    "qr-image": "^3.2.0",
+    "qrcode": "^1.5.3",
     "request": "^2.88.2"
   },
   "devDependencies": {
